--- a/userInterface/index.html
+++ b/userInterface/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
+    <meta name='viewport'
+            content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
+
     <link href="css/result.css" rel="stylesheet">
 
 </head>
