added button functions

--- a/userInterface/index.html
+++ b/userInterface/index.html
@@ -21,7 +21,7 @@
                     <img src="img/BoschCoins.png">
                 </div>
                 <div class="price">
-                    2 BC
+                    <span id="price"></span> BC
                 </div>
                 <div class="selectType">
                     <table>
