user interface improvement

--- a/userInterface/index.html
+++ b/userInterface/index.html
@@ -10,7 +10,9 @@
 
 </head>
 <body>
-
+    <div id="loadingModal">
+        Hallo
+    </div>
     <table>
         <tr>
             <td class="codeGen">
@@ -27,10 +29,10 @@
                     <table>
                         <tr>
                             <td>
-                                <button id="coffee-normal">Normal</button>
+                                <button id="normal">Normal</button>
                             </td>
                             <td>
-                                <button id="coffee-strong">Strong</button>
+                                <button id="strong">Strong</button>
                             </td>
                         </tr>
                     </table>
