added logic to user interface

--- a/userInterface/index.html
+++ b/userInterface/index.html
@@ -10,8 +10,18 @@
 
 </head>
 <body>
-    <div id="loadingModal">
-        Hallo
+    <div id="backdrop hidden"></div>
+    <div id="loadingModal hidden">
+        <table>
+            <tr>
+                <td>
+                    <img src="img/coffee.svg" class="loading-icon">
+                    <div class="loading-text">
+                        Brewing "xyz" coffee. Please wait...
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
     <table>
         <tr>
