fixed stupid mistake

--- a/userInterface/index.html
+++ b/userInterface/index.html
@@ -10,12 +10,12 @@
 
 </head>
 <body>
-    <div id="backdrop hidden"></div>
-    <div id="loadingModal hidden">
+    <div id="backdrop" class="hidden"></div>
+    <div id="loadingModal" class="hidden">
         <table>
             <tr>
                 <td>
-                    <img src="img/coffee.svg" class="loading-icon">
+                    <!--<img src="img/coffee.svg" class="loading-icon">-->
                     <div class="loading-text">
                         Brewing "xyz" coffee. Please wait...
                     </div>
