added loading icon

--- a/userInterface/index.html
+++ b/userInterface/index.html
@@ -15,7 +15,7 @@
         <table>
             <tr>
                 <td>
-                    <!--<img src="img/coffee.svg" class="loading-icon">-->
+                    <img src="img/loading.svg" class="loading-icon">
                     <div class="loading-text">
                         Brewing "xyz" coffee. Please wait...
                     </div>
@@ -26,7 +26,8 @@
     <table>
         <tr>
             <td class="codeGen">
-                <div id="qrcode"></div>
+                <div id="qrcode">
+                </div>
             </td>
             <td class="details">
                 <div class="logo">
