--- a/userInterface/index.html
+++ b/userInterface/index.html
@@ -17,7 +17,7 @@
                 <td>
                     <img src="img/loading.svg" class="loading-icon">
                     <div class="loading-text">
-                        Brewing "xyz" coffee. Please wait...
+                        Brewing awesome coffee. Please wait...
                     </div>
                 </td>
             </tr>
